--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head> 
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <meta property="og:title" content="Join Paradox Studio">
+    <meta property="og:image" content="icon.png">
+    <meta description="Become a team member of our company.Become developer,ui/ux designer,manager.>
     <title>Become A Team Member | Paradox Studio</title> 
     <style> 
         body { background-color: #0d1117; color: white; font-family: Arial, sans-serif; margin: 0; padding: 0; }
@@ -59,6 +62,27 @@
             color: #8b949e;
             font-size: 14px;
         }
+        .text-container {
+        background: #808080;
+        border: 1px solid #808000;
+        padding: 20px;
+        border-radius: 50px;
+        text-align: center;
+        transition: 0.3s;
+        }
+        .text-container:hover {
+        border-color: #00ecff;
+        transform: translateY(-5px);
+        }
+        .text-container h1 {
+        font-size: 24px;
+        color: #00ecff;
+        margin-bottom: 10px;
+        }
+        .text-container p {
+        color: ##87CEEB;
+        font-size: 14px;
+        }
     </style>
 </head> 
 <body>
@@ -97,6 +121,12 @@
         <p>A Member who manages our company projects and admins.</p>
         <p style="color: #ff7b72;">Status: Empty</p>
     </div>
+</section>
+<section>
+    <div class="text-container">
+        <h1>Why Join Us?</h1>
+        <p>Join us because we give you training for work and lead for developing websites properly and develop your favourite site easily.</p>
+        <p style="color: ##87CEE">Are you ready?</p>
 </section>
 
 </body> 
