--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
         <h1>Why Join Us?</h1>
         <p>Join us because we give you training for work and lead for developing websites properly and develop your favourite site easily.</p>
         <p style="color: ##87CEE">Are you ready?</p>
+    </div>
 </section>
 
 </body> 
