--- a/apply.html
+++ b/apply.html
@@ -1,24 +1,34 @@
-<DOCTYPE.html!>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta chrest="UTF-8">
-    <meta name="viewport" content="width-device-width, intial-scale=1.0">
-    <meta property="og:title" content="Join Paradox studio'>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Join Paradox Studio">
     <meta property="og:image" content="icon.png">
-    <meta name="description" content="Become a team member of our company. Become developer, ui/ux designer, manager.">
+    <meta name="description" content="Become a team member of our company.">
     <title>Apply To Become Member</title>
 
     <style>
-      body { background-color: #0d1117; color: white; font-family: Arial, sans-serif; margin: 0; padding: 0; }
+        body { background-color: #0d1117; color: white; font-family: Arial, sans-serif; margin: 0; padding: 0; }
 
-        .main-header { background-color: rgba(10, 10, 10, 0.95); padding: 15px 50px; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; border-bottom: 2px solid #00ecff; }
+        .main-header { 
+            background-color: rgba(10, 10, 10, 0.95); 
+            padding: 15px 50px; 
+            display: flex; 
+            justify-content: space-between; 
+            align-items: center; 
+            position: sticky; 
+            top: 0; 
+            z-index: 1000; 
+            border-bottom: 2px solid #00ecff; 
+        }
 
         .logo { color: #00ecff; font-size: 24px; font-weight: bold; text-shadow: 0 0 10px #00ecff; }
 
         nav a { color: white; margin-left: 20px; text-decoration: none; font-size: 16px; transition: 0.3s; }
-
         nav a:hover { color: #00ecff; text-shadow: 0 0 5px #00ecff; }
-      .form-container {
+
+        .form-container {
             max-width: 500px;
             margin: 50px auto;
             background: #161b22;
@@ -45,74 +55,75 @@
         }
 
         .ghost-btn:hover { background-color: #00ecff; color: black; box-shadow: 0 0 20px #00ecff; }
-      
     </style>
-  </head>
-  <body>
+</head>
+<body>
 
     <header class="main-header">
-      <div class="logo">Apply for team</div>
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="apply.html">Apply</a>
-      </nav>
-      <section class="form-container">
+        <div class="logo">Apply for team</div>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="apply.html">Apply</a>
+        </nav>
+    </header> <section class="form-container">
         <h1 style="color:#00ecff">Apply Now</h1>
         <p>Fill your details.</p>
 
         <div class="input-group">
-          <label>Your Name</label>
-          <input type="text" id="username" placeholder="Enter full name" required>
+            <label>Your Name</label>
+            <input type="text" id="username" placeholder="Enter full name" required>
         </div>
 
         <div class="input-group">
-          <label>Posistion</label>
-          <input type="text" id="userRole" placeholder="Developer/Manager?" required>
+            <label>Position</label>
+            <input type="text" id="userRole" placeholder="Developer/Manager?" required>
         </div>
 
         <div class="input-group">
-          <label>Your Education</label>
-          <input type="number" id="userStudy" placeholder="8,9,10,11,12,13,14,15,16" required>
+            <label>Your Education (Class)</label>
+            <input type="number" id="userStudy" placeholder="e.g. 8, 9, 10" required>
         </div>
 
         <div class="input-group">
-          <label>Your Age</label>
-          <input type="number" id="userAge" placeholder="18,19,20" required>
+            <label>Your Age</label>
+            <input type="number" id="userAge" placeholder="e.g. 18" required>
         </div>
 
         <div class="input-group">
-          <label>Why you want to join us?</label>
-          <input type="description" id="userReason" placeholder="I want to join becuase......" required>
+            <label>Why join us?</label>
+            <textarea id="userReason" rows="4" placeholder="I want to join because..." style="width: 100%; background: #0d1117; color: white; border: 1px solid #30363d; border-radius: 8px; padding: 12px; outline: none;"></textarea>
         </div>
 
-        <button type="button" class="ghost-btn" oneclick="sendToWhatsapp()">Submit</button>
-      </section>
-        <script>
+        <button type="button" class="ghost-btn" onclick="sendToWhatsApp()">Submit</button>
+    </section>
+
+    <script>
         function sendToWhatsApp() {
-            let name = document.getElementById('userName').value;
+            // IDs bilkul sahi match karni chahiye
+            let name = document.getElementById('username').value;
             let role = document.getElementById('userRole').value;
             let study = document.getElementById('userStudy').value;
-            let age = document.getElementById('userage').value;
-            let reason = document.getElementById('userreason').value;
-            if(name == "" || role == "" || study =="" || age =="" || reason == "") {
-                alert("These all fields are required! ");
+            let age = document.getElementById('userAge').value;
+            let reason = document.getElementById('userReason').value;
+
+            if(name == "" || role == "" || study == "" || age == "" || reason == "") {
+                alert("Please fill all fields!");
                 return;
             }
 
-            // --- APNA NUMBER YAHAN DALO ---
             let myNumber = "923096602143"; 
 
+            // Message ko properly jorna (concatenate) zaroori hai
             let finalMsg = "🔥 *New Paradox Application* 🔥%0a%0a" + 
                            "*Name:* " + name + "%0a" + 
                            "*Role:* " + role + "%0a" + 
-                           "*study:* " + study;
-                           "*age:* " + age;
-                           "*reason:* " + reason;
+                           "*Education:* " + study + "%0a" +
+                           "*Age:* " + age + "%0a" +
+                           "*Reason:* " + reason;
 
             let url = "https://wa.me/" + myNumber + "?text=" + finalMsg;
-            
             window.open(url, '_blank').focus();
         }
     </script>
-  </body>
+</body>
 </html>
