--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta property="og:title" content="Join Paradox Studio">
     <meta property="og:image" content="icon.png">
     <meta name="description" content="Become a team member of our company. Become developer, ui/ux designer, manager.">
+  <link rel="icon" type="image/png" href="icon.png">
     <title>Become A Team Member | Paradox Studio</title> 
     
     <style> 
