--- a/apply.html
+++ b/apply.html
@@ -6,6 +6,7 @@
     <meta property="og:title" content="Join Paradox Studio">
     <meta property="og:image" content="icon.png">
     <meta name="description" content="Become a team member of our company.">
+    <link rel="icon" type="image/png" href="icon.png">
     <title>Apply To Become Member</title>
 
     <style>
