--- a/apply.html
+++ b/apply.html
@@ -66,65 +66,44 @@
             <a href="index.html">Home</a>
             <a href="apply.html">Apply</a>
         </nav>
-    </header> <section class="form-container">
+    </header> 
+
+    <section class="form-container">
         <h1 style="color:#00ecff">Apply Now</h1>
-        <p>Fill your details.</p>
+        <p>Fill your details. Your data will be sent securely.</p>
 
-        <div class="input-group">
-            <label>Your Name</label>
-            <input type="text" id="username" placeholder="Enter full name" required>
-        </div>
+        <form action="https://formspree.io/f/xdalozlo" method="POST">
+            
+            <div class="input-group">
+                <label>Your Name</label>
+                <input type="text" name="Username" placeholder="Enter full name" required>
+            </div>
 
-        <div class="input-group">
-            <label>Position</label>
-            <input type="text" id="userRole" placeholder="Developer/Manager?" required>
-        </div>
+            <div class="input-group">
+                <label>Position</label>
+                <input type="text" name="Role" placeholder="Developer/Manager?" required>
+            </div>
 
-        <div class="input-group">
-            <label>Your Education (Class)</label>
-            <input type="number" id="userStudy" placeholder="e.g. 8, 9, 10" required>
-        </div>
+            <div class="input-group">
+                <label>Your Education (Class)</label>
+                <input type="number" name="Education" placeholder="e.g. 8, 9, 10" required>
+            </div>
 
-        <div class="input-group">
-            <label>Your Age</label>
-            <input type="number" id="userAge" placeholder="e.g. 18" required>
-        </div>
+            <div class="input-group">
+                <label>Your Age</label>
+                <input type="number" name="Age" placeholder="e.g. 18" required>
+            </div>
 
-        <div class="input-group">
-            <label>Why join us?</label>
-            <textarea id="userReason" rows="4" placeholder="I want to join because..." style="width: 100%; background: #0d1117; color: white; border: 1px solid #30363d; border-radius: 8px; padding: 12px; outline: none;"></textarea>
-        </div>
+            <div class="input-group">
+                <label>Why join us?</label>
+                <textarea name="Reason" rows="4" placeholder="I want to join because..." style="width: 100%; background: #0d1117; color: white; border: 1px solid #30363d; border-radius: 8px; padding: 12px; outline: none;" required></textarea>
+            </div>
 
-        <button type="button" class="ghost-btn" onclick="sendToWhatsApp()">Submit</button>
+            <input type="hidden" name="_next" value="https://your-site.vercel.app/thankyou.html">
+
+            <button type="submit" class="ghost-btn">Submit Application</button>
+        </form>
     </section>
 
-    <script>
-        function sendToWhatsApp() {
-            // IDs bilkul sahi match karni chahiye
-            let name = document.getElementById('username').value;
-            let role = document.getElementById('userRole').value;
-            let study = document.getElementById('userStudy').value;
-            let age = document.getElementById('userAge').value;
-            let reason = document.getElementById('userReason').value;
-
-            if(name == "" || role == "" || study == "" || age == "" || reason == "") {
-                alert("Please fill all fields!");
-                return;
-            }
-
-            let myNumber = "923096602143"; 
-
-            // Message ko properly jorna (concatenate) zaroori hai
-            let finalMsg = "🔥 *New Paradox Application* 🔥%0a%0a" + 
-                           "*Name:* " + name + "%0a" + 
-                           "*Role:* " + role + "%0a" + 
-                           "*Education:* " + study + "%0a" +
-                           "*Age:* " + age + "%0a" +
-                           "*Reason:* " + reason;
-
-            let url = "https://wa.me/" + myNumber + "?text=" + finalMsg;
-            window.open(url, '_blank').focus();
-        }
-    </script>
 </body>
 </html>
