--- a/apply.html
+++ b/apply.html
@@ -93,12 +93,14 @@
                 <label>Your Age</label>
                 <input type="number" name="Age" placeholder="e.g. 18" required>
             </div>
-
+            <div class="input-group">
+                <label>your project</label>
+                <input type="url" name="Age" placeholder="https://your-site.com" optional>
+            </div>
             <div class="input-group">
                 <label>Why join us?</label>
                 <textarea name="Reason" rows="4" placeholder="I want to join because..." style="width: 100%; background: #0d1117; color: white; border: 1px solid #30363d; border-radius: 8px; padding: 12px; outline: none;" required></textarea>
             </div>
-
             <input type="hidden" name="_next" value="https://your-site.vercel.app/thankyou.html">
 
             <button type="submit" class="ghost-btn">Submit Application</button>
