--- a/apply.html
+++ b/apply.html
@@ -78,6 +78,10 @@
                 <label>Your Name</label>
                 <input type="text" name="Username" placeholder="Enter full name" required>
             </div>
+            <div class="input-group">
+                <label>Your Father's Name</label>
+                <input type="text" name="father name" placeholder="father name" optional>
+            </div>
 
             <div class="input-group">
                 <label>Position</label>
@@ -94,8 +98,12 @@
                 <input type="number" name="Age" placeholder="e.g. 18" required>
             </div>
             <div class="input-group">
-                <label>your project</label>
-                <input type="url" name="Age" placeholder="https://your-site.com" optional>
+                <label>Your project</label>
+                <input type="url" name="project" placeholder="https://your-site.com" optional>
+            </div>
+            <div class="input-group">
+                <label>Your Email</label>
+                <input type="text" name="Email" placeholder="your-mail@gmail.com" required>
             </div>
             <div class="input-group">
                 <label>Why join us?</label>
