--- a/apply.html
+++ b/apply.html
@@ -105,6 +105,14 @@
                 <label>Your Email</label>
                 <input type="text" name="Email" placeholder="your-mail@gmail.com" required>
             </div>
+          <div class="input-group">
+    <label>Do you know coding?</label>
+    <select name="knowcoding" required style="width: 100%; padding: 12px; background: #0d1117; border: 1px solid #30363d; color: white; border-radius: 8px; outline: none; appearance: none; cursor: pointer;">
+        <option value="" disabled selected>Select an option</option>
+        <option value="yes">Yes, I know</option>
+        <option value="no">No, I don't know<option>
+    </select>
+</div>
             <div class="input-group">
                 <label>Why join us?</label>
                 <textarea name="Reason" rows="4" placeholder="I want to join because..." style="width: 100%; background: #0d1117; color: white; border: 1px solid #30363d; border-radius: 8px; padding: 12px; outline: none;" required></textarea>
