--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
         <p>A Member who manages our company projects and admins.</p>
         <p style="color: #ff7b72;">Status: Empty</p>
     </div>
+     <div class="item-grid">
+        <h1>Owner</h1>
+        <p>A person who is owner of company.</p>
+        <a href="https://finalwarning.vercel.app" style="text-decoration:none;">
+            <button class="ghost-btn">Visit profile</button>
+    </div>
 </section>
 
 <section>
