--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <section class="grid-container">
      <div class="item-grid">
         <h1>Owner</h1>
-        <p>A person who is owner of company.</p>
+        <p style="color: #355E3B;">Status: Active</p>
         <a href="https://finalwarning.vercel.app" style="text-decoration:none;">
             <button class="ghost-btn">Visit profile</button>
     </div>
