--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
 
         .text-container h1 { font-size: 28px; color: #00ecff; margin-bottom: 15px; }
         .text-container p { color: #87CEEB; font-size: 16px; line-height: 1.6; }
+        .profile-btn { background-color: #00A36C color: black; padding: 15px 80px font-size: 18px; font-weight: bold; border: 2px solid #00ecff; border-radius: 50px; text-shadow: 0 0 6px #00ecff; cursor: pointer; transition: 0.4s; text-transform: uppercase; }
+        .profile-btn:hover { background-color: #00ecff; color: black; box-shadow: 0 0 20px #00ecff; transform: scale(1.05); }
+
     </style>
 </head> 
 <body>
@@ -102,7 +105,7 @@
         <h1>Owner</h1>
         <p style="color: #355E3B;">Status: Active</p>
         <a href="https://finalwarning.vercel.app" style="text-decoration:none;">
-            <button class="ghost-btn">Visit profile</button>
+            <button class="profile-btn">Visit profile</button>
     </div>
     <div class="item-grid">
         <h1>Lead Developer</h1>
