--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@
     </div>
      <div class="item-grid">
         <h1>Owner</h1>
+         <h2>Ghost</h2>
         <p style="color: #355E3B;">Status: Active</p>
-        <a href="https://finalwarning.vercel.app" style="text-decoration:none;">
+        <a href="https://ghostprofile.vercel.app" style="text-decoration:none;">
             <button class="profile-btn">Visit profile</button>
     </div>
     <div class="item-grid">
