--- a/apply.html
+++ b/apply.html
@@ -80,7 +80,7 @@
             </div>
             <div class="input-group">
                 <label>Your Father's Name</label>
-                <input type="text" name="father name" placeholder="father name" optional>
+                <input type="text" name="father name" placeholder="father name(optional)" optional>
             </div>
 
             <div class="input-group">
@@ -99,7 +99,7 @@
             </div>
             <div class="input-group">
                 <label>Your project</label>
-                <input type="url" name="project" placeholder="https://your-site.com" optional>
+                <input type="url" name="project" placeholder="https://your-site.com(optional)" optional>
             </div>
             <div class="input-group">
                 <label>Your Email</label>
